tests/baselines/reference/noImplicitReturnsWithoutReturnExpression.errors.txt
noImplicitReturnsWithoutReturnExpression.ts(2,5): error TS2322: Type 'undefined' is not assignable to type 'number'.


==== noImplicitReturnsWithoutReturnExpression.ts (1 errors) ====
    function isMissingReturnExpression(): number {
        return;
        ~~~~~~
!!! error TS2322: Type 'undefined' is not assignable to type 'number'.
    }
    
    function isMissingReturnExpression2(): any {
        return;
    }
    
    function isMissingReturnExpression3(): number|void {
        return;
    }
    
    function isMissingReturnExpression4(): void {
        return;
    }
    
    function isMissingReturnExpression5(x) {
        if (x) {
            return 0;
        }
        else {
            return;
        }
    }
    